--- a/src/CommandHandlers/CommandHandlers.csproj
+++ b/src/CommandHandlers/CommandHandlers.csproj
@@ -1,20 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <AssemblyName>Selise.Ecap.SC.PraxisMonitor.CommandHandlers</AssemblyName>
+        <RootNamespace>Selise.Ecap.SC.PraxisMonitor.CommandHandlers</RootNamespace>
+        
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="SeliseBlocks.Genesis.Framework" Version="6.0.0" />
-  </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Contracts\Contracts.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <ProjectReference Include="..\Commands\Commands.csproj" />
+        <ProjectReference Include="..\Domain\Domain.csproj" />
+        <ProjectReference Include="..\ValidationHandlers\ValidationHandlers.csproj" />
+        <ProjectReference Include="..\Validators\Validators.csproj" />
+    </ItemGroup>
 </Project>
