--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -1,21 +1,47 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+        <AssemblyName>Selise.Ecap.SC.PraxisMonitor.Domain</AssemblyName>
+        <RootNamespace>Selise.Ecap.SC.PraxisMonitor.Domain</RootNamespace>
+        
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="SeliseBlocks.Genesis.Framework" Version="6.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Remove="Builder\**" />
+        <EmbeddedResource Remove="Builder\**" />
+        <None Remove="Builder\**" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Contracts\Contracts.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Commands\Commands.csproj" />
+        <ProjectReference Include="..\Events\Events.csproj" />
+        <ProjectReference Include="..\Queries\Queries.csproj" />
+        <ProjectReference Include="..\Utils\Utils.csproj" />
+        <ProjectReference Include="..\Validators\Validators.csproj" />
+        <ProjectReference Include="..\ValidationHandlers\ValidationHandlers.csproj" />
+    </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Aspose.PDF" Version="24.10.0" />
+        <PackageReference Include="AutoMapper" Version="12.0.1" />
+        <PackageReference Include="EPPlus" Version="5.1.0" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+		<PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
+       <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+        <PackageReference Include="ObjectsComparer" Version="1.4.1" />
+        <PackageReference Include="Selise.AppSuite.SessionManagement" Version="2.0.18296.1" />
+        <PackageReference Include="SeliseBlocks.Entities" Version="25.7.2.6" />
+        <PackageReference Include="SeliseBlocks.MailService.Driver" Version="6.0.1.1" />
+		<PackageReference Include="SeliseBlocks.Genesis.Framework.Esb.Producer" Version="6.0.1.2" />
+        <PackageReference Include="SeliseBlocks.Genesis.Framework " Version="6.0.1.2" />
+        <PackageReference Include="SeliseBlocks.GraphQL.Extensions" Version="24.2.29.1" /> 
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.80.2" />
+        <PackageReference Include="ZXing.Net" Version="0.16.7" />
+        <PackageReference Include="Aspose.Words" Version="20.6.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="DomainServices\InvoiceGenerator" />
+    </ItemGroup>
 </Project>
