--- a/src/QueryHandlers/QueryHandlers.csproj
+++ b/src/QueryHandlers/QueryHandlers.csproj
@@ -1,18 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+        <AssemblyName>Selise.Ecap.SC.PraxisMonitor.QueryHandlers</AssemblyName>
+        <RootNamespace>Selise.Ecap.SC.PraxisMonitor.QueryHandlers</RootNamespace>
+        
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="SeliseBlocks.Genesis.Framework" Version="6.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Aspose.Words" Version="20.6.0" />
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+      <PackageReference Include="SeliseBlocks.Entities" Version="25.7.2.6" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Contracts\Contracts.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Contracts\Contracts.csproj" />
+      <ProjectReference Include="..\Queries\Queries.csproj" />
+	  <ProjectReference Include="..\Domain\Domain.csproj" />
+	</ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="CockpitModule\" />
+    </ItemGroup>
 
 </Project>
