--- a/src/Utils/Utils.csproj
+++ b/src/Utils/Utils.csproj
@@ -1,13 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+        <AssemblyName>Selise.Ecap.SC.PraxisMonitor.Utils</AssemblyName>
+        <RootNamespace>Selise.Ecap.SC.PraxisMonitor.Utils</RootNamespace>
+        
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="SeliseBlocks.Genesis.Framework" Version="6.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="12.0.1" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.4" />
+        <PackageReference Include="SeliseBlocks.Entities" Version="25.7.2.6" />
+        <PackageReference Include="ObjectsComparer" Version="1.4.1" />
+    </ItemGroup>
 
 </Project>
