--- a/src/Contracts/Contracts.csproj
+++ b/src/Contracts/Contracts.csproj
@@ -25,4 +25,8 @@
     <ItemGroup>
         <ProjectReference Include="..\Events\Events.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="DomainServices\Services\" />
+    </ItemGroup>
 </Project>
