--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -43,5 +43,6 @@
 
     <ItemGroup>
         <Folder Include="DomainServices\InvoiceGenerator" />
+        <Folder Include="Repositories\" />
     </ItemGroup>
 </Project>
