--- a/src/WebService/appsettings.Development.json
+++ b/src/WebService/appsettings.Development.json
@@ -12,6 +12,5 @@
   "LocalFilePath": "temp_files",
   "DefaultFileName": "Document.docx",
   "DefaultAccessToken": "default-token-123",
-  "DefaultUserDisplayName": "Anonymous User",
-  "GlobalConfigJsonPath": "C:/ECAP_CONFIGS/GlobalConfig_aks_wopi.json"
+  "DefaultUserDisplayName": "Anonymous User"
 }
