--- a/src/WebService/appsettings.Development.json
+++ b/src/WebService/appsettings.Development.json
@@ -12,5 +12,6 @@
   "LocalFilePath": "temp_files",
   "DefaultFileName": "Document.docx",
   "DefaultAccessToken": "default-token-123",
-  "DefaultUserDisplayName": "Anonymous User"
+  "DefaultUserDisplayName": "Anonymous User",
+  "BrowserPath": "a8848448cc"
 }
