--- a/src/WebService/appsettings.prod-az.json
+++ b/src/WebService/appsettings.prod-az.json
@@ -66,5 +66,12 @@
   "AIConversationUrl": "/api/conversation/chat",
 
   "Environment": "Production",
-  "EnableLogRecord": "1"
+  "EnableLogRecord": "1",
+  
+  "CollaboraBaseUrl": "https://colabora.rashed.app",
+  "LocalFilePath": "temp_files",
+  "DefaultFileName": "Document.docx",
+  "DefaultAccessToken": "default-token-123",
+  "DefaultUserDisplayName": "Anonymous User",
+  "BrowserPath": "a8848448cc"
 }
