--- a/src/WebService/appsettings.stg-az.json
+++ b/src/WebService/appsettings.stg-az.json
@@ -56,7 +56,7 @@
   "EsignClientSecret": "SlzxjOI0P7JEk8G229WCECe2h5QQET8Iqg3y54eUbA2LVo=",
   "BlocksBaseUrl": "http://msblocks.selisestage.com",
   "MicroserviceBaseUrl": "http://stg-microservices.selise.biz",
-  "TranslationServiceBaseUrl": "http://ai-taskflow.selisestage.com", // "https://ai-taskflow.selisestage.com", // "https://stage-translation.selisecloud.com", // "http://translation.selisestage.com/api/business-translation"
+  "TranslationServiceBaseUrl": "http://ai-taskflow.selisestage.com",
   "TranslationUrl": "/api/translation/",
   "TranslationMultipleUrl": "/api/translation/multiple",
   "VectorDBServiceBaseUrl": "http://ai-taskflow.selisestage.com",
@@ -66,5 +66,12 @@
   "AIConversationUrl": "/api/conversation/chat",
 
   "Environment": "Stage",
-  "EnableLogRecord": "1"
+  "EnableLogRecord": "1",
+  
+  "CollaboraBaseUrl": "https://colabora.rashed.app",
+  "LocalFilePath": "temp_files",
+  "DefaultFileName": "Document.docx",
+  "DefaultAccessToken": "default-token-123",
+  "DefaultUserDisplayName": "Anonymous User",
+  "BrowserPath": "a8848448cc"
 }
