run cronjob for delete session from disk

--- a/src/WebService/appsettings.Development.json
+++ b/src/WebService/appsettings.Development.json
@@ -13,5 +13,7 @@
   "DefaultFileName": "Document.docx",
   "DefaultAccessToken": "default-token-123",
   "DefaultUserDisplayName": "Anonymous User",
-  "BrowserPath": "a8848448cc"
+  "BrowserPath": "a8848448cc",
+
+  "WopiCleanupTime": "00:05"
 }
